--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -57,30 +57,10 @@ jobs:
         run: mvn -B clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  docker:
-    name: Publish - Docker Hub
-    runs-on: ubuntu-18.04
-    needs: [test]
-    env:
-      REPO: ${{ secrets.DOCKER_REPO }}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11.0.4
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
-      - name: Build jar
-        run: mvn -B clean install -DskipTests
-      - name: Build Docker image
-        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
-      - name: Publish Docker image
-        run: docker push $REPO
 
   heroku:
     name: Build and push to Heroku
-    needs: [artifact, docker]
+    needs: [artifact]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
