--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -21,10 +21,10 @@ jobs:
         ports:
           - "5432:5432"
         env:
-          POSTGRES_HOST: "localhost"
-          POSTGRES_USER: "admin"
-          POSTGRES_PASSWORD: "admin"
-          POSTGRES_DB: "ss_db"
+          POSTGRES_HOST: "ec2-52-86-115-245.compute-1.amazonaws.com"
+          POSTGRES_USER: "plxbeuvdfciyck"
+          POSTGRES_PASSWORD: "d374dfbe34c020ce8e01a3db70f997b6505251a6be214f3d2c6e164450b9a1b1"
+          POSTGRES_DB: "dcrcb5c9g8467q"
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
